fix: reduce the contrast of icons

--- a/src/pages/dashboard/styles.less
+++ b/src/pages/dashboard/styles.less
@@ -7,6 +7,7 @@
     position: absolute;
     left: 26px;
     top: 34px;
+    opacity: 0.5;
   }
   .trend-box {
     .rs-panel-body {
